# tinyadapt

./: LICENSE  README.md  pyproject.toml
demo/: app.py
reports/: benchmark_results.json  compression_report.md  drift.csv  latency.csv  memory.csv  training.csv
scripts/: export_report.py  run_all_benchmarks.py  train_lora.py  train_qlora.py
tests/: test_lora.py  test_model_shapes.py  test_qlora.py  test_quantization.py  test_stats.py
tinyadapt/: __init__.py
tinyadapt/benchmarks/: __init__.py  drift.py  latency.py  memory.py  training.py
tinyadapt/models/: __init__.py  bignet.py  fp16.py  int4.py  lora.py  qlora.py
tinyadapt/quantization/: __init__.py  blockwise_4bit.py
tinyadapt/training/: __init__.py  datasets.py  evaluate.py  train_adapter.py
tinyadapt/utils/: __init__.py  checkpoints.py  seed.py  stats.py
