[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyadapt"
version = "0.1.0"
description = "Efficient neural-network adaptation with FP16, 4-bit quantization, LoRA, and QLoRA."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
demo = [
  "streamlit>=1.30",
]
charts = [
  "matplotlib>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
